# AdventOfCode2025

./: .gdb_history  .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
common/rs/aoc/: Cargo.toml
common/rs/aoc/src/: lib.rs
common/rs/bitset/: Cargo.toml
common/rs/bitset/src/: lib.rs
common/rs/cdcacm-io/: Cargo.toml
common/rs/cdcacm-io/src/: lib.rs
common/rs/embedded-aoc/: Cargo.toml  clippy.toml
common/rs/embedded-aoc/src/: blocking.rs  lib.rs  minimal.rs  nonblocking.rs
common/rs/numset/: Cargo.toml
common/rs/numset/src/: lib.rs
common/rs/simplex/: Cargo.toml
common/rs/simplex/src/: lib.rs
common/rs/slice-partitions/: Cargo.toml
common/rs/slice-partitions/src/: lib.rs
common/rs/ui/: Cargo.toml
common/rs/ui/src/: lib.rs
common/rs/ui2/: Cargo.toml
common/rs/ui2/src/: lib.rs
days/day01/rs/: Cargo.toml
days/day01/rs/benches/: bench.rs
days/day01/rs/src/: lib.rs  main.rs
days/day01/rsui/: Cargo.toml
days/day01/rsui/src/: main.rs
days/day02/rs/: Cargo.toml  build.rs  clippy.toml
days/day02/rs/benches/: bench.rs
days/day02/rs/src/: lib.rs  main.rs
days/day02/rsui/: Cargo.toml  index.html
days/day02/rsui/src/: main.rs
days/day03/rs/: Cargo.toml  clippy.toml
days/day03/rs/benches/: bench.rs
days/day03/rs/src/: lib.rs  main.rs
days/day03/rsui/: Cargo.toml  index.html  index.scss
days/day03/rsui/src/: main.rs
days/day04/rs/: Cargo.toml  clippy.toml
days/day04/rs/benches/: bench.rs
days/day04/rs/src/: lib.rs  main.rs
days/day04/rsui/: Cargo.toml  index.html
days/day04/rsui/src/: main.rs
days/day05/rs/: Cargo.toml  clippy.toml
days/day05/rs/benches/: bench.rs
days/day05/rs/src/: lib.rs  main.rs
days/day05/rsui/: Cargo.toml  index.html
days/day05/rsui/src/: main.rs
days/day06/rs/: Cargo.toml  clippy.toml
days/day06/rs/benches/: bench.rs
days/day06/rs/src/: lib.rs  main.rs
days/day06/rsui/: Cargo.toml  index.html
days/day06/rsui/src/: main.rs
days/day07/rs/: Cargo.toml  clippy.toml
days/day07/rs/benches/: bench.rs
days/day07/rs/src/: lib.rs  main.rs
days/day07/rsui/: Cargo.toml  index.html
days/day07/rsui/src/: main.rs
days/day08/rs/: Cargo.toml  clippy.toml
days/day08/rs/benches/: bench.rs
days/day08/rs/src/: lib.rs  main.rs
days/day08/rsui/: Cargo.toml  index.html
days/day08/rsui/src/: main.rs
days/day09/rs/: Cargo.toml  clippy.toml
days/day09/rs/benches/: bench.rs
days/day09/rs/src/: lib.rs  main.rs
days/day09/rsui/: Cargo.toml  index.html
days/day09/rsui/src/: main.rs
days/day10/rs/: Cargo.toml  clippy.toml
days/day10/rs/benches/: bench.rs
days/day10/rs/src/: lib.rs  main.rs  set.rs  simplex.rs
days/day10/rsui/: Cargo.toml  index.html
days/day10/rsui/src/: main.rs
days/day11/rs/: Cargo.toml  clippy.toml
days/day11/rs/benches/: bench.rs
days/day11/rs/src/: lib.rs  main.rs
days/day11/rsui/: Cargo.toml  index.html
days/day11/rsui/src/: main.rs
days/day12/rs/: Cargo.toml
days/day12/rs/benches/: bench.rs
days/day12/rs/src/: lib.rs  main.rs
days/day12/rsui/: Cargo.toml  index.html
days/day12/rsui/src/: main.rs
embedded/aoc-avr/: Cargo.toml  Ravedude.toml  clippy.toml
embedded/aoc-avr/examples/: now.rs  serial.rs
embedded/aoc-avr/src/: lib.rs  main.rs
embedded/aoc-esp32/: Cargo.toml  build.rs  clippy.toml
embedded/aoc-esp32/examples/: fp_benches.rs  test_day10.rs
embedded/aoc-esp32/src/: lib.rs  main.rs  serial_logger.rs
embedded/nrf52840-dk/: Cargo.toml  build.rs  clippy.toml  memory.x
embedded/nrf52840-dk/src/: main.rs
embedded/rp-pico/: Cargo.toml  build.rs  clippy.toml  memory.x
embedded/rp-pico/src/: main.rs
embedded/rp-pico2/: Cargo.toml  build.rs
embedded/rp-pico2/src/: main.rs
embedded/stm32f3-discovery/: Cargo.toml  clippy.toml
embedded/stm32f3-discovery/src/: main.rs
embedded/stm32f411e-disco/: Cargo.toml  clippy.toml
embedded/stm32f411e-disco/src/: main.rs
embedded/stm32h743zi-nucleo/: Cargo.toml  build.rs
embedded/stm32h743zi-nucleo/src/: main.rs
