[workspace]
members = [
    "common/rs/aoc",
    "common/rs/ui",
    "common/rs/ui2",
    "common/rs/bitset",
    "common/rs/mem",

    "days/day01/rs",
    "days/day01/rsui",
    
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT or Apache-2.0"
readme = "README.org"
version = "0.1.0"
authors = ["vescoc"]

[workspace.dependencies]
aes = "0.8.4"
bytecount = "0.6.8"
cbc = { version = "0.1.2", features = ["std"] }
dirs = "6.0.0"
hashbrown = "0.15.1"
hex = "0.4.3"
nalgebra = "0.33.2"
num = "0.4.3"
rayon = "1.10.0"
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.12"
toml = "0.9.4"
criterion = { version = "0.7", features = ["html_reports"] }
itertools = "0.14.0"
heapless = "0.9.1"
gcd = "2.3.0"
imageproc = "0.25"
clap = { version = "4.5", features = ["derive"] }
nom = "8"
chrono = "0.4.38"

yew = { version = "0.21", features = ["csr"] }
web-sys = { version = "0.3", features = ["HtmlInputElement", "console"] }
instant = { version = "0.1", features = ["wasm-bindgen"] }
gloo-console = "0.3"
gloo-worker = "0.5"

aoc = { path = "common/rs/aoc" }
ui = { path = "common/rs/ui", features = ["wasm-bindgen"] }
ui2 = { path = "common/rs/ui", features = ["wasm-bindgen"] }

day01 = { path = "days/day01/rs", default-features = false }

[workspace.lints.clippy]
pedantic = "deny"

[profile.release]
debug = true
codegen-units = 1
