[workspace]
members = [
    "common/rs/aoc",
    "common/rs/ui",
    "common/rs/ui2",
    "common/rs/bitset",
    "common/rs/mem",

    "common/rs/cdcacm-io",
    "common/rs/embedded-aoc",

    "embedded/rp-pico2",

    "days/day01/rs",
    "days/day01/rsui",

    "days/day02/rs",
    "days/day02/rsui",
    
    "days/day03/rs",
    "days/day03/rsui",
    
    "days/day04/rs",
    "days/day04/rsui",
    
    "days/day05/rs",
    "days/day05/rsui",
    
    "days/day06/rs",
    "days/day06/rsui",
    
    "days/day07/rs",
    "days/day07/rsui",
    
    "days/day08/rs",
    "days/day08/rsui",
    
    "days/day09/rs",
    "days/day09/rsui",
    
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT or Apache-2.0"
readme = "README.org"
version = "0.1.0"
authors = ["vescoc"]

[workspace.dependencies]
aes = "0.8.4"
bytecount = "0.6.8"
cbc = { version = "0.1.2", features = ["std"] }
dirs = "6.0.0"
hashbrown = "0.15.1"
hex = "0.4.3"
nalgebra = "0.33.2"
num = "0.4.3"
rayon = "1.10.0"
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.12"
toml = "0.9.4"
criterion = { version = "0.7", features = ["html_reports"] }
itertools = "0.14.0"
heapless = "0.9.2"
gcd = "2.3.0"
imageproc = "0.25"
clap = { version = "4.5", features = ["derive"] }
nom = "8"
chrono = "0.4.38"

yew = { version = "0.21", features = ["csr"] }
web-sys = { version = "0.3", features = ["HtmlInputElement", "console"] }
instant = { version = "0.1", features = ["wasm-bindgen"] }
gloo-console = "0.3"
gloo-worker = "0.5"

embedded-io-async = "0.6.1"
embedded-io = "0.6.1"
embassy-usb = "0.5.1"
defmt = "1"
log = "0.4"
fugit = "0.3"
static_cell = "2.1.0"

aoc = { path = "common/rs/aoc" }
ui = { path = "common/rs/ui", features = ["wasm-bindgen"] }
ui2 = { path = "common/rs/ui", features = ["wasm-bindgen"] }

cdcacm-io = { path = "common/rs/cdcacm-io" }

day01 = { path = "days/day01/rs", default-features = false }
day02 = { path = "days/day02/rs", default-features = false }
day03 = { path = "days/day03/rs", default-features = false }
day04 = { path = "days/day04/rs", default-features = false }
day05 = { path = "days/day05/rs", default-features = false }
day06 = { path = "days/day06/rs", default-features = false }
day07 = { path = "days/day07/rs", default-features = false }
day08 = { path = "days/day08/rs", default-features = false }
day09 = { path = "days/day09/rs", default-features = false }

[workspace.lints.clippy]
pedantic = "deny"
large_stack_frames = "deny"
large_stack_arrays = "deny"
large_futures = "deny"

[profile.release]
debug = true
codegen-units = 1
lto = 'fat'
