[package]
name = "aoc-esp32"
version.workspace = true
edition.workspace = true

[features]
esp32 = [
    "esp-rtos/esp32",
	"esp-hal/esp32",
	"esp-backtrace/esp32",
	"esp-bootloader-esp-idf/esp32",
	"esp-println/esp32",
	"embedded-aoc/stack100k",
	"embedded-aoc/f32",
]

esp32s2 = [
    "esp-rtos/esp32s2",
	"esp-hal/esp32s2",
	"esp-backtrace/esp32s2",
	"esp-bootloader-esp-idf/esp32s2",
	"esp-println/esp32s2",
	"critical-section",
	"embedded-aoc/stack100k",
	"embedded-aoc/f32",
]

esp32s3 = [
    "esp-rtos/esp32s3",
	"esp-hal/esp32s3",
	"esp-backtrace/esp32s3",
	"esp-bootloader-esp-idf/esp32s3",
	"esp-println/esp32s3",
	"embedded-aoc/alldays",
	"embedded-aoc/f32",
]

esp32c3 = [
    "esp-rtos/esp32c3",
	"esp-hal/esp32c3",
	"esp-backtrace/esp32c3",
	"esp-bootloader-esp-idf/esp32c3",
	"esp-println/esp32c3",
	"embedded-aoc/alldays",
	"embedded-aoc/f32",
]

esp32c6 = [
    "esp-rtos/esp32c6",
	"esp-hal/esp32c6",
	"esp-backtrace/esp32c6",
	"esp-bootloader-esp-idf/esp32c6",
	"esp-println/esp32c6",
	"embedded-aoc/alldays",
	"embedded-aoc/f32",
]

[dependencies]
cfg-if.workspace = true

embassy-executor = { version = "0.9.0", features = ["nightly"] }
embassy-time = "0.5.0"

esp-rtos = { version = "0.2.0", features = ["embassy", "log-04"] }
esp-hal = { version = "1.0.0", features = ["unstable", "log-04"] }
esp-backtrace = { version = "0.18.1", features = ["panic-handler", "println"] }
esp-bootloader-esp-idf = "0.4.0"
esp-println = { version = "0.16.1", features = ["log-04"] }

critical-section = { version = "1.2", optional = true }

log.workspace = true
fugit.workspace = true

embedded-aoc = { path = "../../common/rs/embedded-aoc", default-features = false, features = ["log", "nonblocking"] }

[dev-dependencies]
day10.workspace = true
heapless.workspace = true
simplex.workspace = true

[lints]
workspace = true
