[package]
name = "nrf52840-dk"
version.workspace = true
edition.workspace = true

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"

embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "nightly"] }

embassy-nrf = { version = "0.9.0", features = ["nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }

embassy-time = "0.5.0"
embassy-usb = "0.5.0"

fugit = { version = "0.3", features = ["defmt"] }

static_cell.workspace = true

defmt.workspace = true
defmt-rtt = "1"

embedded-aoc = { path = "../../common/rs/embedded-aoc", default-features = false, features = ["alldays", "defmt", "nonblocking", "f32"] }
cdcacm-io.workspace = true

[lints]
workspace = true
