[package]
name = "rp-pico"
version.workspace = true
edition.workspace = true

[features]
overclock = []

[dependencies]
defmt.workspace = true
static_cell.workspace = true
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
defmt-rtt = "1"
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "nightly"] }
embassy-rp = { version = "0.9.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040", "binary-info"] }
embassy-time = "0.5.0"
embassy-usb = "0.5.0"
fugit = { version = "0.3", features = ["defmt"] }
portable-atomic = { version = "1.12", features = ["critical-section"] }

embedded-aoc = { path = "../../common/rs/embedded-aoc", default-features = false, features = ["alldays", "defmt", "nonblocking", "f32"] }
cdcacm-io.workspace = true

[lints]
workspace = true
