[package]
name = "stm32f411e-disco"
version.workspace = true
edition.workspace = true

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"

embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "nightly"] }

embassy-stm32 = { version = "0.4.0", features = ["stm32f411ve", "unstable-pac", "time-driver-tim2", "exti", "defmt", "memory-x"] }

embassy-time = { version = "0.5.0" }
embassy-usb = { version = "0.5.0" }

fugit = { version = "0.3", features = ["defmt"] }

defmt.workspace = true
defmt-rtt = "1"

static_cell.workspace = true

embedded-aoc = { path = "../../common/rs/embedded-aoc", default-features = false, features = ["stack64k", "defmt", "nonblocking", "f32"] }
cdcacm-io.workspace = true

[lints]
workspace = true
