[package]
name = "stm32h743zi-nucleo"
version.workspace = true
edition.workspace = true

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"

embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "nightly"] }

embassy-stm32 = { version = "0.4.0", features = ["stm32h743zi", "unstable-pac", "time-driver-tim2", "exti", "defmt", "memory-x"] }

embassy-time = "0.5.0"
embassy-usb= "0.5.0"

fugit = { version = "0.3", features = ["defmt"] }

portable-atomic = { version = "1.12", features = ["critical-section"] }

defmt.workspace = true
defmt-rtt = "1"

static_cell.workspace = true

embedded-aoc = { path = "../../common/rs/embedded-aoc", default-features = false, features = ["buffer25k", "alldays", "defmt", "nonblocking", "f32"] }
cdcacm-io.workspace = true

[lints]
workspace = true
