[package]
name = "embedded-aoc"
version.workspace = true
edition.workspace = true

[features]
default = ["buffer25k"]

buffer25k = []
buffer1k = []

defmt = ["dep:defmt"]
log = ["dep:log"]

blocking = ["dep:embedded-io"]
nonblocking = ["dep:embedded-io-async", "dep:static_cell"]
minimal = ["dep:embedded-io"]

day01 = ["dep:day01"]
day02 = ["dep:day02"]
day03 = ["dep:day03"]
day04 = ["dep:day04"]
day05 = ["dep:day05"]
day06 = ["dep:day06"]
day07 = ["dep:day07"]
day08 = ["dep:day08"]
day09 = ["dep:day09"]
day10 = ["dep:day10"]
day11 = ["dep:day11"]
day12 = ["dep:day12"]

alldays = ["stack200k"]

f32 = []
f64 = []

stack200k = [
    "stack100k",

    "day08",
]

stack100k = [
    "stack64k",

    "day11",
]

stack64k = [
    "stack20k",

    "day04",

	"day09",
]

stack20k = [
    "stack6k",
	
    "day10",
]

stack6k = [
    "stack5k",
	
    "day07",
]

stack5k = [
    "stack3k",
	
	"day05",
]

stack3k = [
    "stack2k",
	
    "day02",
]

stack2k = [
    "stack1k",
	
    "day06",

    "day12",
]

stack1k = [
    "day01",
	
    "day03",
]

[dependencies]
defmt = { workspace = true, optional = true }
log = { workspace = true, optional = true }
heapless.workspace = true
fugit.workspace = true
embedded-io = { workspace = true, optional = true }
embedded-io-async = { workspace = true, optional = true }
static_cell = { workspace = true, optional = true }

day01 = { workspace = true, optional = true }
day02 = { workspace = true, optional = true }
day03 = { workspace = true, optional = true }
day04 = { workspace = true, optional = true }
day05 = { workspace = true, optional = true }
day06 = { workspace = true, optional = true }
day07 = { workspace = true, optional = true }
day08 = { workspace = true, optional = true }
day09 = { workspace = true, optional = true }
day10 = { workspace = true, optional = true }
day11 = { workspace = true, optional = true }
day12 = { workspace = true, optional = true }

[lints]
workspace = true
