[package]
name = "day10"
version.workspace = true
edition.workspace = true

[features]
default = ["input", "rayon", "stable"]

input = []
rayon = ["dep:rayon"]
stable = ["simplex/std"]

[package.metadata.aoc]
year = 2025
day = 10

[dev-dependencies]
criterion.workspace = true

[build-dependencies]
aoc.workspace = true

[[bench]]
name = "bench"
harness = false

[lints]
workspace = true

[dependencies]
heapless.workspace = true
rayon = { workspace = true, optional = true }

numset.workspace = true
simplex.workspace = true